# spin-mlips

./: CMakeLists.txt  Makefile  README.md  build.sh  install_dependencies.sh
example/: pre.py  test.xyz  test_spin.data
example/python/: pre.py
example/spin-dynamics/: CrI3_fm_rlx.data  in.spinMD  in.spin_dynamics
example/static/: in.nep-spin
include/: descriptor.h  math_utils.h  model.h  neighbor_list.h  nep_types.h  xyz_reader.h
interface/FIX-SIB/: Install.sh  README.md  USER-SPIN-ML.cmake  bugfix-summary.md  fix_glangevin_spin_sib.cpp  fix_glangevin_spin_sib.h  fix_landau_spin.cpp  fix_landau_spin.h  fix_langevin_spin_sib.cpp  fix_langevin_spin_sib.h  fix_nh_spin_sib.cpp  fix_nh_spin_sib.h  fix_npt_spin_sib.cpp  fix_npt_spin_sib.h  fix_nve_spin_sib.cpp  fix_nve_spin_sib.h  fix_nvt_spin_sib.cpp  fix_nvt_spin_sib.h  min_spin_lattice.cpp  min_spin_lattice.h  pair_spin_ml.h  spin-lattice-opt.md
interface/USER-NEP-SPIN/: Install.sh  USER-NEP-SPIN.cmake  fix_langevin_spin_rk4.cpp  fix_langevin_spin_rk4.h  fix_langevin_spin_sib.cpp  fix_langevin_spin_sib.h  fix_nve_spin_rk4.cpp  fix_nve_spin_rk4.h  fix_nve_spin_sib.cpp  fix_nve_spin_sib.h  nep_spin_data.cpp  nep_spin_data.h  pair_nep_spin.cpp  pair_nep_spin.h  pair_nep_spin_kokkos.cpp  pair_nep_spin_kokkos.h
interface/USER-SPIN-STEP/: Install.sh  USER-SPIN-STEP.cmake  pair_spin_step.cpp  pair_spin_step.h  step_utils.cpp  step_utils.h
src/: cg_coefficients.h  descriptor.cpp  descriptor.h  main.cpp  math_utils.cpp  math_utils.h  model.cpp  model.h  neighbor_list.cpp  neighbor_list.h  nep_types.h  xyz_reader.cpp  xyz_reader.h
tools/: CrI3_8time8SL.xyz  add_magmoms2xyz.py  convert-bothDATAandXYZ.py  convert_model.py
